// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders a banner component 1`] = `
<div>
  <img
    alt="Alt"
    className="img-fluid"
    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/Name.jpg"
  />
</div>
`;

exports[`Snapshots renders a fact 1`] = `
<div
  className="photo slide"
>
  <img
    alt="Did You Know?"
    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/fact.jpg"
  />
  <div
    className="photo-overlay"
  >
    <h3>
      Hall of Fame Football player John Elway was born in Port Angeles
    </h3>
  </div>
</div>
`;

exports[`Snapshots renders a feature on the home page 1`] = `
<div
  className="home-photo"
>
  <img
    alt="Port Angeles"
    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/port-angeles.jpg"
  />
  <div
    className="home-overlay"
  >
    <h3>
      Port Angeles
    </h3>
    <p>
      Visit the Gateway to the Olympic National Park
    </p>
  </div>
</div>
`;

exports[`Snapshots renders a photo 1`] = `
<div>
  <img
    alt="Test picture"
    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/ghi_o.jpg"
  />
  <h3>
    Test picture
  </h3>
</div>
`;

exports[`Snapshots renders a restaurant component 1`] = `
<div
  className="restaurant"
>
  <h2
    className="restaurantTitle"
  >
    Restaurant Name
  </h2>
  <div
    className="restaurantImage"
  >
    <img
      alt="Restaurant Name"
      className="img-fluid"
      src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/restaurant image.jpg"
    />
    <div
      className="address"
    >
      <p>
        123 Fake Street
      </p>
      <p>
        Springfield, USA
      </p>
    </div>
  </div>
  <div
    className="paragraph"
  >
    <p>
      One paragraph
    </p>
    <p>
      Two paragraph
    </p>
    <p>
      Three paragraph
    </p>
  </div>
</div>
`;

exports[`Snapshots renders correct button 1`] = `
<a
  href="/visit"
  onClick={[Function]}
>
  <span
    aria-hidden={true}
    className="fa fa-camera fa-2x homeButtons"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EE3A43",
        "color": "black",
        "justifyContent": "center",
      }
    }
  />
</a>
`;

exports[`Snapshots renders correct url 1`] = `"https://api.flickr.com/services/rest/?method=flickr.photosets.getPhotos&api_key=0c3f8d32a28de8434240115b85a28499&photoset_id=135847282452394&user_id=8994820%40N07&extras=tags&per_page=25&format=json&nojsoncallback=1"`;

exports[`Snapshots renders multiple banners 1`] = `
<div
  className="banner"
>
  <div
    className="bannerSlick"
  >
    <div
      className="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        className="slick-list"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={null}
        onMouseMove={null}
        onMouseUp={[Function]}
        onTouchCancel={null}
        onTouchEnd={[Function]}
        onTouchMove={null}
        onTouchStart={[Function]}
        style={Object {}}
      >
        <div
          className="slick-track"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <div
            aria-hidden={false}
            className="slick-slide slick-active slick-current"
            data-index={0}
            onClick={[Function]}
            style={
              Object {
                "WebkitTransition": "opacity 2000ms ease, visibility 2000ms ease",
                "left": -0,
                "opacity": 1,
                "outline": "none",
                "position": "relative",
                "transition": "opacity 2000ms ease, visibility 2000ms ease",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div>
                  <img
                    alt="Coastline"
                    className="img-fluid"
                    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/coast-banner.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={1}
            onClick={[Function]}
            style={
              Object {
                "WebkitTransition": "opacity 2000ms ease, visibility 2000ms ease",
                "left": -0,
                "opacity": 0,
                "outline": "none",
                "position": "relative",
                "transition": "opacity 2000ms ease, visibility 2000ms ease",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div>
                  <img
                    alt="Inner Harbour"
                    className="img-fluid"
                    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/harbour-banner.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={2}
            onClick={[Function]}
            style={
              Object {
                "WebkitTransition": "opacity 2000ms ease, visibility 2000ms ease",
                "left": -0,
                "opacity": 0,
                "outline": "none",
                "position": "relative",
                "transition": "opacity 2000ms ease, visibility 2000ms ease",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div>
                  <img
                    alt="British Columbia Parliament Buildings"
                    className="img-fluid"
                    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/parliament-banner.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={3}
            onClick={[Function]}
            style={
              Object {
                "WebkitTransition": "opacity 2000ms ease, visibility 2000ms ease",
                "left": -0,
                "opacity": 0,
                "outline": "none",
                "position": "relative",
                "transition": "opacity 2000ms ease, visibility 2000ms ease",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <div>
                  <img
                    alt="Port Angeles"
                    className="img-fluid"
                    src="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/port-angeles-banner.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        className="slick-dots"
        onMouseEnter={null}
        onMouseLeave={null}
        onMouseOver={null}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <li
          className="slick-active"
        >
          <button
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          className=""
        >
          <button
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          className=""
        >
          <button
            onClick={[Function]}
          >
            3
          </button>
        </li>
        <li
          className=""
        >
          <button
            onClick={[Function]}
          >
            4
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="title"
  >
    <h1>
      Port Angeles to Victoria
    </h1>
    <h1>
      See Adam's Black Ball Trip
    </h1>
  </div>
</div>
`;

exports[`Snapshots renders multiple buttons 1`] = `
<div
  className="buttons"
>
  <div>
    <a
      href="/visit"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-camera fa-2x homeButtons"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EE3A43",
            "color": "black",
            "justifyContent": "center",
          }
        }
      />
    </a>
  </div>
  <div>
    <a
      href="/eat"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-cutlery fa-2x homeButtons"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EE3A43",
            "color": "black",
            "justifyContent": "center",
          }
        }
      />
    </a>
  </div>
  <div>
    <a
      href="/learn"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-graduation-cap fa-2x homeButtons"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EE3A43",
            "color": "black",
            "justifyContent": "center",
          }
        }
      />
    </a>
  </div>
  <div>
    <a
      href="/buy"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-usd fa-2x homeButtons"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EE3A43",
            "color": "black",
            "justifyContent": "center",
          }
        }
      />
    </a>
  </div>
</div>
`;
